<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>tr.customteam.point-time</groupId>
    <artifactId>core</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    <dependencies>
        <!-- javafx -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>11.0.2</version>
        </dependency>
         <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>11.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>11.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>11.0.2</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.github.typhon0/AnimateFX -->
		<dependency>
		    <groupId>io.github.typhon0</groupId>
		    <artifactId>AnimateFX</artifactId>
		    <version>1.2.0</version>
		</dependency>
		<!-- font awesome -->
        <dependency>
            <groupId>de.jensd</groupId>
            <artifactId>fontawesomefx-commons</artifactId>
            <version>9.1.2</version>
        </dependency>
        <dependency>
            <groupId>de.jensd</groupId>
            <artifactId>fontawesomefx-fontawesome</artifactId>
            <version>4.7.0-9.1.2</version>
        </dependency>
        <dependency>
            <groupId>de.jensd</groupId>
            <artifactId>fontawesomefx-materialicons</artifactId>
            <version>2.2.0-9.1.2</version>
        </dependency>
        <dependency>
            <groupId>de.jensd</groupId>
            <artifactId>fontawesomefx-materialdesignfont</artifactId>
            <version>2.0.26-9.1.2</version>
        </dependency>
        <!-- jfoenix -->
        <dependency>
            <groupId>com.jfoenix</groupId>
            <artifactId>jfoenix</artifactId>
            <version>9.0.8</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
		<dependency>
		    <groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-core</artifactId>
		    <version>2.9.9</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
		<dependency>
		    <groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-databind</artifactId>
		    <version>2.9.10.1</version>
		</dependency>
		<!-- Selenium -->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-api</artifactId>
			<version>3.14.0</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-chrome-driver</artifactId>
			<version>3.14.0</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>3.14.0</version>
		</dependency>
		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
			<version>2.10.3</version>
		</dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.3</version>
                <executions>
			        <execution>
			            <!-- Default configuration for running -->
			            <id>default-cli</id>
			            <configuration>
			                <mainClass>tr.customteam.point_time.core.App</mainClass>
			                 <options>
					            <option>--add-opens</option>
					            <option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
					            <option>--add-opens</option>
					            <option>javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
					            <option>--add-opens</option>
					            <option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
					            <option>--add-opens</option>
					            <option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
					        </options>
			                 <compilerArgs>
				                <arg>--add-opens</arg>
								<arg>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</arg>
					        </compilerArgs>
			            </configuration>
			        </execution>
			        <execution>
			            <!-- Configuration for debugging -->
			            <id>debug</id>
			            <configuration>
			                <options>
			                    <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:8000</option>
			                </options>
			                <mainClass>tr.customteam.point_time.core.App</mainClass>
			            </configuration>
			        </execution>
			    </executions>
            </plugin>
        </plugins>
    </build>
</project>